Fix the position shift of full-image pictures

--- a/source/css/_common/components/post/post-expand.styl
+++ b/source/css/_common/components/post/post-expand.styl
@@ -61,4 +61,5 @@
   }
 }
 
-.posts-expand .post-body .fancybox img { margin: 0 auto 25px; }
+.posts-expand .post-body .fancybox img { //margin: 0 auto 25px;
+}
